     [sshd.8]
     Add more detail about what permissions are and aren't accepted for
     authorized_keys files.  Corrections jmc@, ok djm@, "looks good" jmc@
   - djm@cvs.openbsd.org 2006/08/29 10:40:19
     [channels.c session.c]
     normalise some inconsistent (but harmless) NULL pointer checks
     spotted by the Stanford SATURN tool, via Isil Dillig;
     ok markus@ deraadt@

20060824
 - (dtucker) [openbsd-compat/basename.c] Include errno.h.
 - (dtucker) [openbsd-compat/bsd-misc.c] Add includes needed for select(2) on
   older systems.
 - (dtucker) [openbsd-compat/bsd-misc.c] Include <sys/select.h> for select(2)
   on POSIX systems.
 - (dtucker) [openbsd-compat/bsd-openpty.c] Include for ioctl(2).
 - (dtucker) [openbsd-compat/rresvport.c] Include <stdlib.h> for malloc.
 - (dtucker) [openbsd-compat/xmmap.c] Move #define HAVE_MMAP to prevent
   unused variable warning when we have a broken or missing mmap(2).

20060822
 - (dtucker) [Makefile.in] Bug #1177: fix incorrect path for sshrc in
   Makefile.  Patch from santhi.amirta at gmail, ok djm.

20060820
 - (dtucker) [log.c] Move ifdef to prevent unused variable warning.
 - (dtucker) [configure.ac] Save $LIBS during PAM library tests and restore
   afterward.  Removes the need to mangle $LIBS later to remove -lpam and -ldl.
 - (dtucker) [configure.ac] Relocate --with-pam parts in preparation for
   fixing bug #1181.  No changes yet.
 - (dtucker) [configure.ac] Bug #1181: Explicitly test to see if OpenSSL
   (0.9.8a and presumably newer) requires -ldl to successfully link.
 - (dtucker) [configure.ac] Remove errant "-".

20060819
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2006/08/18 22:41:29
     [gss-genr.c]
     GSSAPI error code should be 0 and not -1; from simon@sxw.org.uk
 - (dtucker) [openbsd-compat/regress/Makefile.in] Add $(EXEEXT) and add a
   single rule for the test progs.

20060818
 - (dtucker) [configure.ac openbsd-compat/bsd-closefrom.c] Resync with
   closefrom.c from sudo.